# tandem

./: .gitignore  AGENTS.md  README.md  RELEASES.md  dist-workspace.toml  justfile
.github/workflows/: aur-tandem-bin.yml  docs.yml
.tandem/: events.jsonl  tandem.md  theme.toml
.tandem/board/: task-1.md  task-10.md  task-11.md  task-12.md  task-13.md  task-14.md  task-15.md  task-16.md  task-17.md  task-18.md  task-19.md  task-20.md  task-21.md  task-22.md  task-23.md  task-24.md  task-25.md  task-26.md  task-27.md  task-30.md  task-31.md  task-32.md  task-34.md  task-35.md  task-36.md  task-37.md  task-38.md  task-39.md  task-4.md  task-40.md  task-41.md  task-42.md  task-43.md  task-44.md  task-45.md  task-5.md  task-6.md  task-7.md  task-8.md  task-9.md
.tandem/logs/: task-1.md  task-10.md  task-11.md  task-12.md  task-13.md  task-14.md  task-16.md  task-17.md  task-18.md  task-19.md  task-2.md  task-20.md  (+27 more)
docs/: index.md
extensions/: README.md
plan/: delegated-task-tree-worker-spec.md  delegation-and-verification-prompt-improvements.md  domain-research.md  refactor_spec.md  spec.md  todo.md
protocol/: README.md
scripts/: release_checks.py
site/: README.md  astro.config.mjs  package-lock.json  package.json
tandem/: Cargo.toml  GITHUB_RELEASE_NOTES.md  README.md  RELEASE.md
tandem-tui/: Cargo.toml  README.md  RELEASE.md  spec.md
tandem/examples/themes/: default-dark.toml  verdigris.toml
tandem/plan/: modularization-research.md  spec.md  todo.md
tandem/src/: main.rs  tui.rs
tandem/src/tui/: decisions.rs  logs.rs  review.rs  rules.rs  theme.rs
(+53 files in other folders)
