[package]
name = "tandem"
version = "0.4.1"
edition = "2021"
license = "MIT"
description = "Local-first CLI/TUI for human and agent project coordination"
repository = "https://github.com/Algorant/tandem"
readme = "README.md"

[[bin]]
name = "tandem"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
yaml-rust2 = "0.11"
