[package]
name = "tandem"
version = "0.6.5"
edition = "2021"
license = "MIT"
description = "Local-first CLI/TUI for human and agent project coordination"
repository = "https://github.com/Algorant/tandem"
readme = "README.md"

[[bin]]
name = "tandem"
path = "src/main.rs"

# cargo-dist builds release artifacts with `cargo build --profile dist`.
# In this monorepo the Cargo package lives under tandem/ rather than at the
# repository root, so the profile must be defined in this package manifest.
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
yaml-rust2 = "0.11"
